clusters/sandbox/workloads/registry/manifests/registry-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-registry
  namespace: registry
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    external-dns.alpha.kubernetes.io/hostname: registry.fullstack.pw
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.org/client-max-body-size: "0"
spec:
  tls:
  - hosts:
    - registry.fullstack.pw
    secretName: fullstack-tls
  rules:
  - host: registry.fullstack.pw
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: registry
            port:
              number: 5000
  ingressClassName: nginx
